--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
   line-height: 1.3;
+  background: rgb(243, 239, 239);
 }
 small {
   color: red;
@@ -21,15 +22,50 @@ small {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border: 1px solid black;
+  border-radius: 1rem;
+  padding: 1rem;
+}
+.listItem {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 .flexContainer {
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.buttn {
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  background-color: transparent;
+  border: 2px solid transparent;
+  padding: 0.8rem 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-size: 2rem;
+  font-weight: 400;
+  outline: none !important;
+}
+.buttn-add {
+  background-color: #333;
+  color: #fff;
+}
+.buttn-check {
+
+}
+.buttn-delete {
+  color: red;
 }
 .no-see {
   visibility: hidden;
 }
 .completed {
   text-decoration: line-through;
+  background-color: rgb(70, 213, 70);
+  
 }
